--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ install:
   - brew update
   - brew install python3
   - pip3 install -r requirements.txt
-  - pip3 install pytest-cov
+  - pip3 install pytest-cov flake8
 
 script:
-  - py.test --cov-report term-missing --cov=pyfile
+  - py.test
+  - flake8 .
