--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ os: osx
 install:
   - brew update
   - brew install python3
+  - brew install mediainfo
   - pip3 install -r requirements.txt
   - pip3 install pytest-cov flake8
 
