--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --cov-report term-missing --cov=pyfile --capture=sys
+addopts = --cov-report term-missing --cov=pymetareader --capture=sys
