add python2 test env.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,10 @@
 version: 2
 jobs:
-  build:
+  test-python3.6:
     docker:
       - image: circleci/python:3.6.1
+    environment:
+      LC_ALL: "C"
     steps:
       - checkout
       - run: sudo apt-get install mediainfo
@@ -11,3 +13,22 @@ jobs:
       - run: sudo pip install pytest pytest-cov flake8 unittest-xml-reporting
       - run: pytest
       - run: flake8
+  test-python2.7:
+    docker:
+      - image: circleci/python:2.7.13
+    environment:
+      LC_ALL: "C"
+    steps:
+      - checkout
+      - run: sudo apt-get install mediainfo
+      - run: sudo pip install --upgrade pip
+      - run: sudo pip install -r requirements.txt
+      - run: sudo pip install pytest pytest-cov flake8 unittest-xml-reporting
+      - run: pytest
+      - run: flake8
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - test-python3.6
+      - test-python2.7
